--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,13 +1,11 @@
-.headerContainer {
+.header__container {
   height: 5rem;
-  border-bottom: 1px solid var(--gray-800);
+  border-bottom: 1px solid var(--grey-800);
 }
 
-
-.headerContent {
+.header__content {
   max-width: 1120px;
   height: 5rem;
-
   margin: 0 auto;
   padding: 0 2rem;
 
@@ -24,10 +22,10 @@
       padding: 0 0.5rem;
       height: 5rem;
       line-height: 5rem;
-      color: var(--gray-300);
-
+      color: var(--grey-300);
       transition: color 0.2s;
 
+      // todos os a que tem um a antes pegam essa propriedade
       & + a {
         margin-left: 2rem;
       }
@@ -36,13 +34,13 @@
         color: var(--white);
       }
 
-      &.active {
+      &.link__active {
         color: var(--white);
         font-weight: bold;
       }
 
-      &.active::after {
-        content: ''; // sempre
+      &.link__active::after {
+        content: '';
         height: 3px;
         border-radius: 3px 3px 0 0;
         width: 100%;
@@ -54,7 +52,7 @@
     }
   }
 
-  > button {
+  button {
     margin-left: auto;
   }
 }
