--- a/src/components/SubscribeButton/styles.module.scss
+++ b/src/components/SubscribeButton/styles.module.scss
@@ -1,11 +1,12 @@
 .subscribeButton {
   height: 4rem;
-  width: 268px;;
+  width: 260px;
   border: 0;
   border-radius: 2rem;
   background: var(--yellow-500);
-  color: var(--gray-900);
+  color: var(--grey-900);
   font-size: 1.25rem;
+  font-weight: bold;
 
   display: flex;
   align-items: center;
