--- a/src/components/pages/Home/styles.module.scss
+++ b/src/components/pages/Home/styles.module.scss
@@ -2,7 +2,7 @@
   max-width: 1120px;
   margin: 0 auto;
   padding: 0 2rem;
-  height: calc(100vh - 5rem); // 100% descontando o cabeçalho
+  height: calc(100vh - 5rem);
 
   display: flex;
   align-items: center;
@@ -14,7 +14,7 @@
 
   > span {
     font-size: 1.5rem;
-    font-weight: bold;
+    font-weight: bold
   }
 
   h1 {
@@ -26,16 +26,21 @@
     span {
       color: var(--cyan-500);
     }
+  }
 
-    p {
-      font-size: 1.5rem;
-      line-height: 2.5rem;
+  p {
+    font-size: 1.5rem;
+    line-height: 2.25rem;
+    margin-top: 1.5rem;
+
+    strong {
+      color: var(--cyan-500);
+      font-weight: bold;
+    }
+
+    span {
       margin-top: 1.5rem;
-
-      span {
-        color: var(--cyan-500);
-        font-weight: bold;
-      }
+      font-size: 0.625rem;
     }
   }
 
