--- a/src/components/pages/Posts/styles.module.scss
+++ b/src/components/pages/Posts/styles.module.scss
@@ -11,18 +11,17 @@
   a {
     display: block;
 
-    // cada a que vier precedido de outro a
     & + a {
       margin-top: 2rem;
       padding-top: 2rem;
-      border-top: 1px solid var(--gray-700);
+      border-top: 1px solid var(--grey-700);
     }
 
     time {
       font-size: 1rem;
       display: flex;
       align-items: center;
-      color: var(--gay-300);
+      color: var(grey-300);
     }
 
     strong {
@@ -34,8 +33,8 @@
     }
 
     p {
-      color: var(--gray-300);
-      margin-top: 0.5rem;
+      color: var(--grey-300);
+      margin-top: .5rem;
       line-height: 1.625rem;
     }
 
