--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,43 +1,47 @@
+// Zera
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+// Variáveis
 :root {
-  --white: #FFF;
+  --white: #ffffff;
 
-  --gray-100: #e1e1e6;
-  --gray-300: #a8a8b3;
-  --gray-700: #323238;
-  --gray-800: #29292e; 
-  --gray-850: #1f2729; 
-  --gray-900: #121214;
+  --grey-100: #e1e1e6;
+  --grey-300: #a8a8b3;
+  --grey-700: #323238; 
+  --grey-800: #29292e;
+  --grey-850: #1f2729;
+  --grey-900: #121214;
 
   --cyan-500: #61dafb;
-  --yellow-500: #eba417;
+  --yellow-500: #eba418;
 }
 
-@media (max-width: 1000px) {
+// Fonts com acessibilidade
+@media (max-width: 1080px) {
   html {
     font-size: 93.75%;
   }
 }
 
+// Fonts com acessibilidade
 @media (max-width: 720px) {
   html {
     font-size: 87.5%;
   }
 }
 
-
+// Default
 body {
-  background: var(--gray-900);
+  background: var(--grey-900);
   color: var(--white);
 }
 
 body, input, textarea, select, button {
-  font: 400 1rem 'Roboto', sans-serif;
+  font: 400 1rem "Roboto", sans-serif;
 }
 
 button {
@@ -45,6 +49,6 @@ button {
 }
 
 a {
-  color: inherit; // cor do texto pai
+  color: inherit;
   text-decoration: none;
 }
